made apparmor more secure